Alteraçoes na service e na crontroller Nao esta funcionando